feat: Add endpoint to create and get quizzes by topic
