# app/app.py
@@ -9,6 +9,7 @@ from app.routes.quiz import QuizRoutes
 from app.routes.swagger import swagger
 from app.routes.room import RoomRoutes
 from app.routes.topic import TopicRoutes
+from app.routes.topic_quiz import TopicQuizRoutes
 from app.routes.user import UserRoutes
 
 mongo = MongoEngine()
@@ -23,6 +24,7 @@ def create_app():
     api.add_resource(UserRoutes, '/api/users/', '/api/users/<string:user_id>')
     api.add_resource(QuizRoutes, '/api/quizzes/', '/api/quizzes/<string:quiz_id>')
     api.add_resource(TopicRoutes, '/api/topics/', '/api/topics/<string:topic_id>')
+    api.add_resource(TopicQuizRoutes, '/api/topics/<string:topic_id>/quizzes/')
     api.init_app(app)
     cors.init_app(app, resources={r"/api/*": {'origins': CORS_ALLOWED_ORIGIN}})
 
